// webavanue.proto - WebAvanue browser command service
//
// Copyright (C) Manoj Jhawar, Intelligent Devices LLC
// Created: 2025-12-28
//
// Browser automation and web content interaction

syntax = "proto3";

package com.augmentalis.universalrpc.webavanue;

option java_package = "com.augmentalis.universalrpc.webavanue";
option java_multiple_files = true;

// Tab info
message TabInfo {
    string tab_id = 1;
    string url = 2;
    string title = 3;
    bool active = 4;
    bool pinned = 5;
    int32 index = 6;
}

// Navigation request
message NavigateRequest {
    string request_id = 1;
    string tab_id = 2;
    string url = 3;
}

// Page action request
message PageActionRequest {
    string request_id = 1;
    string tab_id = 2;
    string action = 3;            // "scroll", "click", "type", "select"
    map<string, string> params = 4;
}

// Element selector
message ElementSelector {
    string css = 1;               // CSS selector
    string xpath = 2;             // XPath selector
    string text = 3;              // Text content match
    string avid = 4;              // AVID if available
}

// Page element
message PageElement {
    string element_id = 1;
    string tag = 2;
    string text = 3;
    map<string, string> attributes = 4;
    Rect bounds = 5;
    bool visible = 6;
    bool interactable = 7;
}

message Rect {
    float x = 1;
    float y = 2;
    float width = 3;
    float height = 4;
}

// Web action response
message WebActionResponse {
    string request_id = 1;
    bool success = 2;
    string message = 3;
    string result_json = 4;
}

// Page content request
message GetPageContentRequest {
    string request_id = 1;
    string tab_id = 2;
    bool include_hidden = 3;
}

// Page content response
message PageContent {
    string request_id = 1;
    string url = 2;
    string title = 3;
    string html = 4;
    string text = 5;
    repeated PageElement elements = 6;
}

// Download request
message DownloadRequest {
    string request_id = 1;
    string url = 2;
    string filename = 3;
    string destination = 4;
}

// Download status
message DownloadStatus {
    string request_id = 1;
    string download_id = 2;
    string state = 3;             // "pending", "downloading", "completed", "failed"
    float progress = 4;
    int64 bytes_received = 5;
    int64 total_bytes = 6;
    string file_path = 7;
}

// Service definition
service WebAvanueService {
    // Tab management
    rpc GetTabs(GetTabsRequest) returns (TabsResponse);
    rpc CreateTab(CreateTabRequest) returns (TabInfo);
    rpc CloseTab(CloseTabRequest) returns (WebActionResponse);
    rpc SwitchTab(SwitchTabRequest) returns (WebActionResponse);

    // Navigation
    rpc Navigate(NavigateRequest) returns (WebActionResponse);
    rpc GoBack(GoBackRequest) returns (WebActionResponse);
    rpc GoForward(GoForwardRequest) returns (WebActionResponse);
    rpc Reload(ReloadRequest) returns (WebActionResponse);

    // Page interaction
    rpc ExecuteAction(PageActionRequest) returns (WebActionResponse);
    rpc FindElement(FindElementRequest) returns (FindElementResponse);
    rpc GetPageContent(GetPageContentRequest) returns (PageContent);

    // Downloads
    rpc StartDownload(DownloadRequest) returns (DownloadStatus);
    rpc GetDownloadStatus(GetDownloadStatusRequest) returns (DownloadStatus);

    // Event streaming
    rpc StreamPageEvents(StreamPageEventsRequest) returns (stream PageEvent);
}

message GetTabsRequest {
    string request_id = 1;
}

message TabsResponse {
    repeated TabInfo tabs = 1;
    string active_tab_id = 2;
}

message CreateTabRequest {
    string request_id = 1;
    string url = 2;
    bool active = 3;
}

message CloseTabRequest {
    string request_id = 1;
    string tab_id = 2;
}

message SwitchTabRequest {
    string request_id = 1;
    string tab_id = 2;
}

message GoBackRequest {
    string request_id = 1;
    string tab_id = 2;
}

message GoForwardRequest {
    string request_id = 1;
    string tab_id = 2;
}

message ReloadRequest {
    string request_id = 1;
    string tab_id = 2;
}

message FindElementRequest {
    string request_id = 1;
    string tab_id = 2;
    ElementSelector selector = 3;
}

message FindElementResponse {
    string request_id = 1;
    repeated PageElement elements = 2;
}

message GetDownloadStatusRequest {
    string request_id = 1;
    string download_id = 2;
}

message StreamPageEventsRequest {
    string request_id = 1;
    string tab_id = 2;
    repeated string event_types = 3;  // "load", "click", "scroll", "input"
}

message PageEvent {
    string tab_id = 1;
    string event_type = 2;
    string target_selector = 3;
    map<string, string> data = 4;
    int64 timestamp = 5;
}
